--- a/pong.html
+++ b/pong.html
@@ -36,7 +36,7 @@ const PADDLE_HEIGHT = 100;
 const PADDLE_THICKNESS = 10;
 
 
-//lmao I have no idea how this shit works, but it reads mouse input
+//lmao I have no idea how this works, but it reads mouse input
 function calculateMousePos(evt) {
 	var rect = canvas.getBoundingClientRect();
 	var root = document.documentElement;
